1.6.3
Fixed updating docviewer.
Setting an image type in the dialog box when building docs will enable images, else no images built.
Removed images from documentation.
Code clean.
Fixed spell check.
Sped up definition search.
Fixed plugin help.
Fixed trying to show non existent page in viewer.
Added Show docs to doc plugin.
Fixed docset with spaces in name.
Removed JavaScript search when building doxygen documentation.
Moved documentation to documentation plugin.
Fixed trying to show/raise doc viewer before 1st use.
When the Doc Viewer is disabled API's etc are viewed in a QTextBrowser that displays a subset of HTML ( doxydocs don't display well yet ).
Doc viewer now disabled by default.
Cleaned up includes.

1.6.2
Includes clean up.
Updated HTML tag plugin.
Updated 'Help'
Tidied up includes.
Simplified set up for Qt5/6 build.
Removed unneeded Q_OBJECT macro's from headers.
Removed SIGNAL/SLOTS macros now using lambdas.

1.6.1
Fixed tab tooltip not displaying file path for doc.
Better bracket matching.
Added option to select 1st tab when restoring session.
Added opening tab to right of current tab or at end, see prefs.
Fixed copy/cut/delete after vertical selection.
Added 'Vertical Paste'  to Edit menu. Empty/short lines are padded with spaces if needed before pasting.
Output msgkey ( session ID ) on start up.
Added vertical delete.
Added vertical cut.
Added "Auto Set Tabs" to prefs to set tabs to one space when ALT selecting and reset on mouse release.
Fixed signal name change in terminal plugin for qt6.
Set min tab width to 1.
Added vertical select ( hold 'CTRL+ALT' when drag selecting text ).
Added number of sessions to prefs max=128 default 24.
Added extra mime types to cpplang plugin.
Minor fix to .desktop files.
Added extra data to shm for the future.
Added semaphores to single instance app ( not really need yet ).
Clean up msg queues on exit with multi instance.
Delete shared mem and msg queue on exit.